--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,8 +2,8 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=gugu2014
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.show-sql=true
